--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,6 +11,10 @@ on:
 
 jobs:
   build:
+    name: "Build and Test"
+    permissions:
+      contents: read
+      pull-requests: write
 
     runs-on: ubuntu-latest
 
@@ -29,3 +33,6 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - uses: davelosert/vitest-coverage-report-action@v1
+      with:
+        vite-config-path: vite.config.ts
