--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - uses: davelosert/vitest-coverage-report-action@v1
+      if: always()
       with:
         vite-config-path: vite.config.ts
